# zcashrpc

./: Cargo.toml
.github/workflows/: zcashrpc-test.yml
src/: client.rs  envelope.rs  error.rs  lib.rs
src/client/: callrpc.rs  rpc_types.rs  subcomponents.rs  utils.rs
tests/: smoke_tests.rs
zcash-rcli/src/: commands.rs
zcashrpc-macros/: Cargo.toml
zcashrpc-macros/src/: calls.rs  lib.rs  typegen_interpreter.rs  utils.rs
zcashrpc-typegen/src/: error.rs  main.rs
zcashrpc-typegen/test_output/: terminal_alias_expected.rs
zcashrpc-typegen/tests/: holistic_tests.rs
